--- a/pandas/gwm-ch3.ipynb
+++ b/pandas/gwm-ch3.ipynb
@@ -195,7 +195,7 @@
    "id": "0d84cb92",
    "metadata": {},
    "source": [
-    "number of rows or columns"
+    "number of rows & columns"
    ]
   },
   {
