--- a/pandas/gwm-tranx.ipynb
+++ b/pandas/gwm-tranx.ipynb
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "6159e706",
    "metadata": {},
    "outputs": [
@@ -351,70 +351,6 @@
        "      <td>-70.43</td>\n",
        "      <td>HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>10/26/2021</td>\n",
-       "      <td>10/26/2021</td>\n",
-       "      <td>02305379Q00DN2LBP</td>\n",
-       "      <td>-18.23</td>\n",
-       "      <td>HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>11/01/2021</td>\n",
-       "      <td>11/01/2021</td>\n",
-       "      <td>02305379J00E8DSEZ</td>\n",
-       "      <td>-78.47</td>\n",
-       "      <td>HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54</th>\n",
-       "      <td>11/01/2021</td>\n",
-       "      <td>11/01/2021</td>\n",
-       "      <td>02305379J00E8DSQM</td>\n",
-       "      <td>-6.59</td>\n",
-       "      <td>HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56</th>\n",
-       "      <td>11/02/2021</td>\n",
-       "      <td>11/02/2021</td>\n",
-       "      <td>02305379K00DN399S</td>\n",
-       "      <td>-39.72</td>\n",
-       "      <td>HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>11/03/2021</td>\n",
-       "      <td>11/03/2021</td>\n",
-       "      <td>02305379L00E99LWA</td>\n",
-       "      <td>-50.00</td>\n",
-       "      <td>HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <td>11/04/2021</td>\n",
-       "      <td>11/04/2021</td>\n",
-       "      <td>02305379M00E0NLBZ</td>\n",
-       "      <td>-15.02</td>\n",
-       "      <td>HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>11/06/2021</td>\n",
-       "      <td>11/06/2021</td>\n",
-       "      <td>02305379P00DH614D</td>\n",
-       "      <td>-64.00</td>\n",
-       "      <td>HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>85</th>\n",
-       "      <td>11/08/2021</td>\n",
-       "      <td>11/08/2021</td>\n",
-       "      <td>02305379T00DV8N9Q</td>\n",
-       "      <td>-20.16</td>\n",
-       "      <td>HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -426,38 +362,23 @@
        "39       10/24/2021   10/24/2021  02305379A00BTP6FS -100.00   \n",
        "40       10/24/2021   10/24/2021  02305379A00BTP6HW   -7.03   \n",
        "42       10/25/2021   10/25/2021  02305379B00DV6DF8  -70.43   \n",
-       "43       10/26/2021   10/26/2021  02305379Q00DN2LBP  -18.23   \n",
-       "53       11/01/2021   11/01/2021  02305379J00E8DSEZ  -78.47   \n",
-       "54       11/01/2021   11/01/2021  02305379J00E8DSQM   -6.59   \n",
-       "56       11/02/2021   11/02/2021  02305379K00DN399S  -39.72   \n",
-       "60       11/03/2021   11/03/2021  02305379L00E99LWA  -50.00   \n",
-       "63       11/04/2021   11/04/2021  02305379M00E0NLBZ  -15.02   \n",
-       "80       11/06/2021   11/06/2021  02305379P00DH614D  -64.00   \n",
-       "85       11/08/2021   11/08/2021  02305379T00DV8N9Q  -20.16   \n",
        "\n",
        "                                 Description  \n",
        "26  HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA  \n",
        "34  HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA  \n",
        "39  HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA  \n",
        "40  HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA  \n",
-       "42  HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA  \n",
-       "43  HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA  \n",
-       "53  HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA  \n",
-       "54  HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA  \n",
-       "56  HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA  \n",
-       "60  HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA  \n",
-       "63  HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA  \n",
-       "80  HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA  \n",
-       "85  HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA  "
+       "42  HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "oo[oo.Description.str.contains(\"HY-VEE\")]"
+    "hv = oo[oo.Description.str.contains(\"HY-VEE\")]\n",
+    "hv.head()"
    ]
   },
   {
