--- a/pandas/gwm-tranx.ipynb
+++ b/pandas/gwm-tranx.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "57b50dc7",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "10bbd09b",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "4  DKTL GIFT SHOP           HONOLULU     HI  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "8c7a020b",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "234a4fc4",
    "metadata": {},
    "outputs": [
@@ -182,10 +182,16 @@
        "SAM'S CLUB 008162        CEDAR RAPIDS IA     3\n",
        "GOODWILL INDUSTRIES OF   CEDAR RAPIDS IA     2\n",
        "MASABI-LLC-RTD-DENVER    303-299-6000 CO     2\n",
-       "Name: Description, dtype: int64"
+       "                                            ..\n",
+       "TST* DENVER UNION STAT   DENVER       CO     1\n",
+       "CVS/PHARMACY #08532      800-746-7287 IA     1\n",
+       "PRIME VIDEO*2Y92P6DS1    888-802-3080 WA     1\n",
+       "DOMINO'S 1765            503-565-4394 IA     1\n",
+       "MCDONALD'S M2039         WEST BRANCH  IA     1\n",
+       "Name: Description, Length: 63, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "1a278bec",
    "metadata": {},
    "outputs": [
@@ -219,7 +225,7 @@
        "Name: Description, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d19fa13b",
    "metadata": {},
    "outputs": [
@@ -259,7 +265,7 @@
        "Name: Description, Length: 86, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "6159e706",
    "metadata": {},
    "outputs": [
@@ -371,7 +377,7 @@
        "42  HY-VEE CEDAR RAPIDS 10   CEDAR RAPIDS IA  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,9 +388,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed79802f",
+   "metadata": {},
+   "source": [
+    "how much was spent at hyvee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3ee7495a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-513.37"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hv.Amount.sum()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ee7495a",
+   "id": "6777c030",
    "metadata": {},
    "outputs": [],
    "source": []
