--- a/pandas/gwm-tranx.ipynb
+++ b/pandas/gwm-tranx.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "57b50dc7",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "10bbd09b",
    "metadata": {},
    "outputs": [
@@ -55,72 +55,90 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>10/14/2021</td>\n",
-       "      <td>10/14/2021</td>\n",
-       "      <td>554295090RS30A22L</td>\n",
-       "      <td>-7.49</td>\n",
-       "      <td>PAYPAL *KATHERINEMI FB   4029357733   CA</td>\n",
+       "      <td>02/07/2022</td>\n",
+       "      <td>02/07/2022</td>\n",
+       "      <td>F146800DN00CHGDDA</td>\n",
+       "      <td>3823.88</td>\n",
+       "      <td>AUTOMATIC PAYMENT - THANK YOU</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>10/16/2021</td>\n",
-       "      <td>10/16/2021</td>\n",
-       "      <td>5543286915SDGV445</td>\n",
-       "      <td>-21.73</td>\n",
-       "      <td>SQ *HAWAIIAN AROMA CAF   HONOLULU     HI</td>\n",
+       "      <td>01/13/2022</td>\n",
+       "      <td>01/13/2022</td>\n",
+       "      <td>0541019QYL3HHZMEG</td>\n",
+       "      <td>-7.49</td>\n",
+       "      <td>TOBACCOOUTLET500005603   CEDAR RAPIDS IA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>10/14/2021</td>\n",
-       "      <td>10/14/2021</td>\n",
-       "      <td>054368490EHT6Y05T</td>\n",
-       "      <td>-91.76</td>\n",
-       "      <td>AINA HAINA FOODLAND FA   HONOLULU     HI</td>\n",
+       "      <td>01/14/2022</td>\n",
+       "      <td>01/14/2022</td>\n",
+       "      <td>5543286QY5SXP2JN4</td>\n",
+       "      <td>-27.81</td>\n",
+       "      <td>AMZ*WOOT LLC             PAY.AMAZON.COWA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>10/15/2021</td>\n",
-       "      <td>10/15/2021</td>\n",
-       "      <td>751911692S66QDFNA</td>\n",
-       "      <td>-47.25</td>\n",
-       "      <td>MD FASHION SHOP          HAWAII       HI</td>\n",
+       "      <td>01/14/2022</td>\n",
+       "      <td>01/14/2022</td>\n",
+       "      <td>5543286QY5SYFQ2JJ</td>\n",
+       "      <td>-8.46</td>\n",
+       "      <td>AMZN MKTP US*7005Z0YR3   AMZN.COM/BILLWA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>10/16/2021</td>\n",
-       "      <td>10/16/2021</td>\n",
-       "      <td>555062992BLNMT4L7</td>\n",
-       "      <td>-70.00</td>\n",
-       "      <td>DKTL GIFT SHOP           HONOLULU     HI</td>\n",
+       "      <td>01/14/2022</td>\n",
+       "      <td>01/14/2022</td>\n",
+       "      <td>5543286QY5SYGTF06</td>\n",
+       "      <td>-64.62</td>\n",
+       "      <td>AMAZON.COM*AT5OF7W03     AMZN.COM/BILLWA</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Transaction Date Posting Date   Reference Number  Amount  \\\n",
-       "0       10/14/2021   10/14/2021  554295090RS30A22L   -7.49   \n",
-       "1       10/16/2021   10/16/2021  5543286915SDGV445  -21.73   \n",
-       "2       10/14/2021   10/14/2021  054368490EHT6Y05T  -91.76   \n",
-       "3       10/15/2021   10/15/2021  751911692S66QDFNA  -47.25   \n",
-       "4       10/16/2021   10/16/2021  555062992BLNMT4L7  -70.00   \n",
+       "  Transaction Date Posting Date   Reference Number   Amount  \\\n",
+       "0       02/07/2022   02/07/2022  F146800DN00CHGDDA  3823.88   \n",
+       "1       01/13/2022   01/13/2022  0541019QYL3HHZMEG    -7.49   \n",
+       "2       01/14/2022   01/14/2022  5543286QY5SXP2JN4   -27.81   \n",
+       "3       01/14/2022   01/14/2022  5543286QY5SYFQ2JJ    -8.46   \n",
+       "4       01/14/2022   01/14/2022  5543286QY5SYGTF06   -64.62   \n",
        "\n",
        "                                Description  \n",
-       "0  PAYPAL *KATHERINEMI FB   4029357733   CA  \n",
-       "1  SQ *HAWAIIAN AROMA CAF   HONOLULU     HI  \n",
-       "2  AINA HAINA FOODLAND FA   HONOLULU     HI  \n",
-       "3  MD FASHION SHOP          HAWAII       HI  \n",
-       "4  DKTL GIFT SHOP           HONOLULU     HI  "
+       "0             AUTOMATIC PAYMENT - THANK YOU  \n",
+       "1  TOBACCOOUTLET500005603   CEDAR RAPIDS IA  \n",
+       "2  AMZ*WOOT LLC             PAY.AMAZON.COWA  \n",
+       "3  AMZN MKTP US*7005Z0YR3   AMZN.COM/BILLWA  \n",
+       "4  AMAZON.COM*AT5OF7W03     AMZN.COM/BILLWA  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "oo = pd.read_csv('Data/Sams-Transaction.csv')\n",
+    "oo = pd.read_csv('Data/Sams-New-Transaction.csv')\n",
     "oo.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5979bc0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<pandas.core.indexing._LocIndexer object at 0x7ae07c487048>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(oo.loc(0))"
    ]
   },
   {
