mostly top bluegrass playlist

--- a/pandas/x.ipynb
+++ b/pandas/x.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "57b50dc7",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "6777c030",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
        "4  Sam's Club&amp;#XX4; World Elite Mastercard&am...     NaN    NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "cdefd722",
    "metadata": {},
    "outputs": [
@@ -428,20 +428,181 @@
        "[1313 rows x 12 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df[['month','day','year']] = df['Date'].str.split('/', expand=True)\n",
-    "df"
+    "# df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7d5f87a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Original Description</th>\n",
+       "      <th>Amount</th>\n",
+       "      <th>Transaction Type</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Account Name</th>\n",
+       "      <th>Labels</th>\n",
+       "      <th>Notes</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1075</th>\n",
+       "      <td>6/25/2021</td>\n",
+       "      <td>Amazon</td>\n",
+       "      <td>AMAZON.COM*210S62SD0 AMZN.COM/BILLWA</td>\n",
+       "      <td>641.99</td>\n",
+       "      <td>debit</td>\n",
+       "      <td>Shopping</td>\n",
+       "      <td>Sam's Club&amp;amp;#XX4; World Elite Mastercard&amp;am...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1080</th>\n",
+       "      <td>6/24/2021</td>\n",
+       "      <td>Amazon</td>\n",
+       "      <td>AMAZON.COM*294ND1FW1 A AMZN.COM/BILLWA</td>\n",
+       "      <td>641.99</td>\n",
+       "      <td>debit</td>\n",
+       "      <td>Shopping</td>\n",
+       "      <td>Sam's Club&amp;amp;#XX4; World Elite Mastercard&amp;am...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>779</th>\n",
+       "      <td>8/21/2021</td>\n",
+       "      <td>Amazon</td>\n",
+       "      <td>AMZN MKTP US*2D04B4G62 AMZN.COM/BILLWA</td>\n",
+       "      <td>533.19</td>\n",
+       "      <td>debit</td>\n",
+       "      <td>Shopping</td>\n",
+       "      <td>Sam's Club&amp;amp;#XX4; World Elite Mastercard&amp;am...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>714</th>\n",
+       "      <td>9/03/2021</td>\n",
+       "      <td>Amazon</td>\n",
+       "      <td>AMAZON.COM*2514E0KL0 AMZN.COM/BILLWA</td>\n",
+       "      <td>148.73</td>\n",
+       "      <td>debit</td>\n",
+       "      <td>Shopping</td>\n",
+       "      <td>Sam's Club&amp;amp;#XX4; World Elite Mastercard&amp;am...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9</td>\n",
+       "      <td>03</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>778</th>\n",
+       "      <td>8/21/2021</td>\n",
+       "      <td>Amazon</td>\n",
+       "      <td>AMAZON.COM*2D5SJ3KI0 A AMZN.COM/BILLWA</td>\n",
+       "      <td>127.33</td>\n",
+       "      <td>debit</td>\n",
+       "      <td>Shopping</td>\n",
+       "      <td>Sam's Club&amp;amp;#XX4; World Elite Mastercard&amp;am...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Date Description                    Original Description  Amount  \\\n",
+       "1075  6/25/2021      Amazon    AMAZON.COM*210S62SD0 AMZN.COM/BILLWA  641.99   \n",
+       "1080  6/24/2021      Amazon  AMAZON.COM*294ND1FW1 A AMZN.COM/BILLWA  641.99   \n",
+       "779   8/21/2021      Amazon  AMZN MKTP US*2D04B4G62 AMZN.COM/BILLWA  533.19   \n",
+       "714   9/03/2021      Amazon    AMAZON.COM*2514E0KL0 AMZN.COM/BILLWA  148.73   \n",
+       "778   8/21/2021      Amazon  AMAZON.COM*2D5SJ3KI0 A AMZN.COM/BILLWA  127.33   \n",
+       "\n",
+       "     Transaction Type  Category  \\\n",
+       "1075            debit  Shopping   \n",
+       "1080            debit  Shopping   \n",
+       "779             debit  Shopping   \n",
+       "714             debit  Shopping   \n",
+       "778             debit  Shopping   \n",
+       "\n",
+       "                                           Account Name  Labels  Notes month  \\\n",
+       "1075  Sam's Club&amp;#XX4; World Elite Mastercard&am...     NaN    NaN     6   \n",
+       "1080  Sam's Club&amp;#XX4; World Elite Mastercard&am...     NaN    NaN     6   \n",
+       "779   Sam's Club&amp;#XX4; World Elite Mastercard&am...     NaN    NaN     8   \n",
+       "714   Sam's Club&amp;#XX4; World Elite Mastercard&am...     NaN    NaN     9   \n",
+       "778   Sam's Club&amp;#XX4; World Elite Mastercard&am...     NaN    NaN     8   \n",
+       "\n",
+       "     day  year  \n",
+       "1075  25  2021  \n",
+       "1080  24  2021  \n",
+       "779   21  2021  \n",
+       "714   03  2021  \n",
+       "778   21  2021  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "amzn = df[df.Description.str.contains('Amazon')]\n",
+    "amzn.sort_values(by='Amount', ascending=False).head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d5f87a0",
+   "id": "eeae6066",
    "metadata": {},
    "outputs": [],
    "source": []
